[gd_scene load_steps=10 format=3 uid="uid://d2e7okgajipy4"]

[ext_resource type="Script" path="res://Hud.gd" id="1_ch4na"]
[ext_resource type="Script" path="res://FPS Counter.gd" id="2_bv3ww"]
[ext_resource type="FontFile" uid="uid://bk6w82hh0dgnv" path="res://fonts/Xolonium-Regular.ttf" id="2_iuara"]
[ext_resource type="Texture2D" uid="uid://ff66shhhik16" path="res://art/origin_marker.png" id="3_74bq3"]
[ext_resource type="Texture2D" uid="uid://c3h8q8qd8768q" path="res://art/icons/settings.png" id="4_bwt0u"]
[ext_resource type="Texture2D" uid="uid://frvnss327a2s" path="res://art/icons/leaderboard_icon.png" id="5_n328g"]
[ext_resource type="Texture2D" uid="uid://oh77tpae2q60" path="res://art/icons/close.png" id="7_ebpno"]

[sub_resource type="InputEventAction" id="InputEventAction_qand2"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_vfrcp"]
events = [SubResource("InputEventAction_qand2")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_ch4na")

[node name="FpsCounter" type="Label" parent="."]
visible = false
offset_left = 1.0
offset_top = 1.0
offset_right = 41.0
offset_bottom = 36.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 25
text = "FPS"
script = ExtResource("2_bv3ww")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 25.0
offset_right = 100.0
offset_bottom = 103.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -241.0
offset_right = 240.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.298039)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 64
text = "Pushy Penguins!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HighScoreMsg" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -348.0
offset_right = 240.0
offset_bottom = -286.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.372549)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 35
text = "HighScore: 0"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NewHighScore" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -238.0
offset_top = 110.0
offset_right = 242.0
offset_bottom = 172.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(1, 0, 0.0166664, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 35
text = "New HighScore!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -285.0
offset_right = 100.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_vfrcp")
text = "Start"

[node name="MissionsButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -172.0
offset_right = 100.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 64
text = "Missions"

[node name="SettingsButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 63.0
grow_horizontal = 0
icon = ExtResource("4_bwt0u")
alignment = 0
icon_alignment = 1

[node name="LeaderboardButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 67.0
offset_right = -15.0
offset_bottom = 115.0
grow_horizontal = 0
icon = ExtResource("5_n328g")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="OriginMarker" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.592157)
scale = Vector2(0.05, 0.05)
texture = ExtResource("3_74bq3")

[node name="Settings" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="Name" type="HBoxContainer" parent="Settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.5
offset_top = -20.0
offset_right = 33.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="Settings/Name"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 31
text = "Name: "

[node name="NameField" type="LineEdit" parent="Settings/Name"]
layout_mode = 2
theme_override_constants/minimum_character_width = 8
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 31
placeholder_text = "Your Name"
alignment = 1
max_length = 20
text_direction = 1

[node name="CloseSettingsButton" type="Button" parent="Settings"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 20.0
offset_right = -15.0
offset_bottom = 68.0
grow_horizontal = 0
icon = ExtResource("7_ebpno")

[node name="ResetScoreButton" type="Button" parent="Settings"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = 43.0
offset_right = 104.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_iuara")
theme_override_font_sizes/font_size = 31
text = "Reset HighScore"

[node name="Leaderboard" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Leaderboard"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="ScrollContainer" type="ScrollContainer" parent="Leaderboard"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Leaderboard/ScrollContainer"]
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Leaderboard/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_iuara")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center][u]Leaderboard[/u][/center]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="Leaderboard/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="CloseLeaderboardButton" type="Button" parent="Leaderboard"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 20.0
offset_right = -15.0
offset_bottom = 68.0
grow_horizontal = 0
icon = ExtResource("7_ebpno")

[node name="Missions" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Missions"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.529412)

[node name="ScrollContainer" type="ScrollContainer" parent="Missions"]
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Missions/ScrollContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="Missions/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="Title" type="RichTextLabel" parent="Missions/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_iuara")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[center][u]Missions[/u][/center]"
fit_content = true

[node name="HSeparator" type="HSeparator" parent="Missions/ScrollContainer/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MissionsContainer" type="VBoxContainer" parent="Missions/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseMissionsButton" type="Button" parent="Missions"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -65.0
offset_top = 30.0
offset_right = -15.0
offset_bottom = 78.0
grow_horizontal = 0
icon = ExtResource("7_ebpno")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MissionsButton" to="." method="_on_missions_button_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_leaderboard_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Settings/CloseSettingsButton" to="." method="_on_close_settings_button_pressed"]
[connection signal="pressed" from="Settings/ResetScoreButton" to="." method="_on_reset_score_button_pressed"]
[connection signal="pressed" from="Leaderboard/CloseLeaderboardButton" to="." method="_on_close_leaderboard_button_pressed"]
[connection signal="pressed" from="Missions/CloseMissionsButton" to="." method="_on_close_missions_button_pressed"]
